<resources>
    <string name="app_name">Dashboard</string>
    <string name="_1">1</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="_2">2</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="_5">5</string>
    <string name="table_layout">Tabel Layout</string>
    <string name="_6">6</string>
    <string name="material_design">Material Design</string>
    <string name="_7">7</string>
    <string name="scroll_view">ScrollView Vertikal</string>
    <string name="_8">8</string>
    <string name="scroll_view_horizontal">ScrollView Horizontal</string>
    <string name="login">Selamat Datang</string>
    <string name="in">Di Halaman Dashboard</string>
</resources>